# inf147_tp1

./: CMakeLists.txt  README.md  main.c
